--- a/style.css
+++ b/style.css
@@ -30,3 +30,20 @@ a {
 nav a {
     color: yellow;
 }
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.cssLogo {
+    padding: 10px 0;
+    height: 200px;
+    width: 200px;
+}
+
+.htmlLogo {
+    padding: 10px 0;
+    height: 200px;
+    width: 200px;
+}
