--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body {
     background: lightblue;
 }
@@ -50,7 +58,7 @@ img {
 .navigation {
     background: darkmagenta;
     padding: 16px;
-    border-radius: 8px;
+    border-radius: 0px;
 }
 
 .navigation__link {
@@ -118,4 +126,8 @@ img {
 
 .footer__link {
     color: #41850d;
+}
+
+.list {
+    list-style: circle;
 }
